Fixed grid elements spacing

--- a/Assets/css/elementMixer.css
+++ b/Assets/css/elementMixer.css
@@ -2,6 +2,7 @@ body {
 	text-align: center;
 }
 
+
 #equalButton {
 	font-size: 50px;
 	display:block;
@@ -12,13 +13,18 @@ body {
 	margin: 0 auto;
 }
 
-#formula {
-	padding: ;
+div.jumbotron {
+	margin-bottom: 0;
 }
 
 hr.style {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    margin-top: 0;
     margin-bottom: 80px;
+}
+
+.row div {
+	margin-bottom: 80px;
 }
